Bug 89345 - imports.h:452:58: error: expected declaration specifiers or '...' before 'va_list'
Summary: imports.h:452:58: error: expected declaration specifiers or '...' before 'va_...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) NetBSD
: medium blocker
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-02-26 20:21 UTC by Vinson Lee
Modified: 2015-02-27 14:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2015-02-26 20:21:41 UTC
mesa: 688d7656c58ea4775dbd55fe56193a27f4799c00 (master 10.6.0-devel)

NetBSD build error

  CC       mesa/program/prog_hash_table.lo
In file included from mesa/program/prog_hash_table.c:31:0:
../src/mesa/main/imports.h:452:58: error: expected declaration specifiers or '...' before 'va_list'
Comment 1 Brian Paul 2015-02-26 20:33:38 UTC
I'll have to restore the #include <stdarg.h>  Patch coming.
Comment 2 Brian Paul 2015-02-27 14:06:05 UTC
Fixed with commit 84a1e3d61e6df449571e41426ec64b115fedc7c3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.